--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Quarantine and Blockade Scenario 1</title>
+    <title>Change Me</title>
     <meta name="viewport" content="initial-scale=1,width=device-width" />
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.11.0/mapbox-gl.js"></script>
     <link
